<resources>
    <string name="app_name">泰心爱语音识别小助手</string>
    <string name="title_cloud">云</string>
    <string name="title_recorder">录音</string>
    <string name="title_me">我</string>
    <string name="recorder_timer">00:00:00</string>
    <string name="default_audio_name">New Audio</string>
    <string name="default_audio_datetime">2019&#8211;11&#8211;11 10:45:00</string>
    <string name="default_audio_duration">00:00:00</string>
    <string name="btn_upload_tips_name">上传</string>
    <string name="btn_transfer_tips_name">转成文字</string>
    <string name="btn_more_tips_name">更多</string>

    <string name="search_title">搜索</string>
    <string name="search_hint">请输入语音名称</string>

    <string name="default_user_name">您好!</string>
    <string name="default_user_action">请登录</string>
    <string name="default_icon_name">icon_name</string>
    <string name="default_icon_info">icon_info</string>
    <string name="user_item_share_name">推荐给好友</string>
    <string name="user_item_settings_name">通用设置</string>
    <string name="user_item_feedback_help_name">帮助与反馈</string>
    <string name="user_item_about_name">关于我们</string>

    <string name="default_audio_directory_name">audio</string>
    <string name="default_audio_save_alert_message">是否保存?</string>
    <string name="default_audio_delete_alert_message">是否删除?</string>
    <string name="default_dialog_positive_text">确定</string>
    <string name="default_dialog_negative_text">取消</string>

    <string name="error_audiorecord_uninitialized">麦克风不可用</string>

    <string name="default_db_name">tedaich_asr.db</string>

    <string name="label_user_login_activity">用户登录/注册</string>
    <string name="label_transfer_text_activity">云语音转换文本</string>

    <string name="record_more_share">分享</string>
    <string name="record_more_rename">重命名</string>
    <string name="record_more_delete">删除</string>
    <string name="cloud_more_sync">云同步</string>
    <string name="cloud_transfer_text">云转换文本</string>

    <string name="audio_item_rename_dialog_title">请输入</string>
    <string name="transfer_text_user_modify">更 正</string>
    <string name="local_user_input">请输入更正文本</string>
    <string name="local_user_input_btn_cancel">取消</string>
    <string name="local_user_input_btn_save">上传</string>

    <string name="warning_content_empty">输入内容不能为空</string>

</resources>
