<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/spacing_super_narrow"
    android:paddingBottom="@dimen/spacing_super_narrow">

    <Button
        android:id="@+id/cloud_sync"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="@dimen/recorder_item_more_btn_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/spacing_normal"
        android:background="@color/audio_item_more_item_background"
        android:contentDescription="@null"
        android:drawableTop="@drawable/ic_cloud_sync"
        android:text="@string/cloud_more_sync"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/cloud_rename"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="@dimen/recorder_item_more_btn_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/audio_item_more_item_background"
        android:contentDescription="@null"
        android:drawableTop="@drawable/ic_rename"
        android:text="@string/record_more_rename"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/cloud_delete"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="@dimen/recorder_item_more_btn_width"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:background="@color/audio_item_more_item_background"
        android:contentDescription="@null"
        android:drawableTop="@drawable/ic_delete_forever"
        android:text="@string/record_more_delete"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>