<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_height"
        android:layout_marginStart="@dimen/spacing_narrow"
        android:layout_marginEnd="@dimen/spacing_narrow"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/transfer_audio_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/default_audio_name"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_narrow"
        android:layout_marginEnd="@dimen/spacing_narrow"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cloud_transfer_text_label"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/small_height"
                android:layout_alignParentStart="true"
                android:gravity="fill_vertical"
                android:text="@string/cloud_transfer_text"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_transfer_text_sync"
                style="@style/btn_blue_background_style"
                android:layout_width="@dimen/btn_large_size"
                android:layout_height="@dimen/tiny_height"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="0dp"
                android:text="@string/cloud_more_sync"
                android:textSize="12sp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/cloud_transfer_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cloud_transfer_text_display_height"
            android:background="@drawable/edit_bg_border_line"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/User_Modify_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_narrow"
        android:layout_marginEnd="@dimen/spacing_narrow"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_user_modify"
            style="@style/btn_blue_background_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_weight="1"
            android:text="@string/transfer_text_user_modify"
            android:textAlignment="center"
            android:textColor="@color/app_background"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/User_Input_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/local_user_input_label"
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_height"
            android:layout_marginStart="@dimen/spacing_narrow"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_narrow"
            android:gravity="fill_vertical"
            android:text="@string/local_user_input"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/local_user_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cloud_transfer_text_display_height"
            android:layout_marginStart="@dimen/spacing_narrow"
            android:layout_marginEnd="@dimen/spacing_narrow"
            android:background="@drawable/edit_white_bg_border_line"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_tiny_size"
            android:layout_marginStart="@dimen/spacing_narrow"
            android:layout_marginTop="@dimen/spacing_narrow"
            android:layout_marginEnd="@dimen/spacing_narrow">

            <Button
                android:id="@+id/btn_cancel"
                style="@style/btn_blue_background_style"
                android:layout_width="@dimen/local_user_input_btn_width"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="65dp"
                android:drawableStart="@drawable/ic_clear_white_tint"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/local_user_input_btn_cancel"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_save"
                style="@style/btn_blue_background_style"
                android:layout_width="@dimen/local_user_input_btn_width"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="65dp"
                android:drawableStart="@drawable/ic_done_white_tint"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/local_user_input_btn_save"
                android:textSize="18sp" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>