<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/audio_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill_vertical"
            android:text="@string/default_audio_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_more"
            android:layout_width="@dimen/btn_small_size"
            android:layout_height="@dimen/btn_small_size"
            android:layout_gravity="end"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@null"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_more_vert" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/audio_datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/default_audio_datetime"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/audio_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/default_audio_duration"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_audio_play"
            android:layout_width="@dimen/btn_tiny_size"
            android:layout_height="@dimen/btn_tiny_size"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@null"
            android:onClick="handleAudioPlayPause"
            android:scaleType="center"
            android:tint="#2196F3"
            app:srcCompat="@drawable/ic_play_circle_outline" />

        <SeekBar
            android:id="@+id/audio_play_progress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:max="1000"
            android:progress="20" />
    </LinearLayout>
</LinearLayout>